# assistant

./: .gitignore  README.md  package.json  run.bat  run.sh  tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
